modified:   index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=¡git , initial-scale=1.0">
+    <title>Es 13 de Mayo?</title>
 </head>
 <body>
-    
+    <h1>Es el 13 de Mayo?</h1>
+    <p id="date"></p>
+    <p id="yesornno"></p>
 </body>
+<script>
+    let yesorno = document.getElementById('yesorno');
+    let date = document.getElementById('date');
+    date.innerHTML = new Date().toLocaleString();
+</script>
 </html>
