--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=¡git , initial-scale=1.0">
     <title>¿Es 13 de Mayo?</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <meta property="og:title" content="¿Es 13 de Mayo?" />
+    <meta property="og:description" content="13 de Mayo es una fecha." />
+    <meta property="og:image" content="https://d.furaffinity.net/art/leo-wolf/1621124254/1621124254.leo-wolf_fennix_mexicano.jpg" />
 </head>
 <style>
     body{
