--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta property="og:title" content="¿Es 13 de Mayo?" />
     <meta property="og:description" content="13 de Mayo es una fecha." />
     <meta property="og:image" content="https://d.furaffinity.net/art/leo-wolf/1621124254/1621124254.leo-wolf_fennix_mexicano.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://13demayo.es-hoy.com" />
 </head>
 <style>
     body{
