--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:image" content="https://d.furaffinity.net/art/leo-wolf/1621124254/1621124254.leo-wolf_fennix_mexicano.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://13demayo.es-hoy.com" />
+<meta content="text/html; charset=UTF-8" name="Content-Type" />
 </head>
 <style>
     body{
