--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://13demayo.es-hoy.com" />
 <meta content="text/html; charset=UTF-8" name="Content-Type" />
+<meta name="twitter:image" content="https://d.furaffinity.net/art/leo-wolf/1621124254/1621124254.leo-wolf_fennix_mexicano.jpg"></meta>
+ 
 </head>
 <style>
     body{
